refactor front, create modals, create controlleradvice

--- a/src/main/resources/templates/mission-types/create-mission-type.html
+++ b/src/main/resources/templates/mission-types/create-mission-type.html
@@ -30,6 +30,11 @@
 
 
 
+
+<div th:replace="~{fragments/modals/message-modal :: message-modal}"></div>
+
+
+
 <div th:replace="~{fragments/scripts :: scripts}"></div>
 
 </body>
