--- a/src/main/resources/templates/fragments/modals/message-modal.html
+++ b/src/main/resources/templates/fragments/modals/message-modal.html
@@ -2,45 +2,49 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <div th:replace="~{fragments/head :: head}"></div>
 <body>
-<div th:replace="~{fragments/scripts :: scripts}"></div>
-<div th:fragment="message-modal" th:if="${not #strings.isEmpty(successMessage) or not #strings.isEmpty(errorMessage)}"
-     class="modal" id="messageModal" tabindex="-1" aria-labelledby="messageModalLabel" aria-hidden="true" role="dialog">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div th:if="${not #strings.isEmpty(successMessage)}" class="modal-header bg-success text-white">
-        <h5 class="modal-title">Succès</h5>
-      </div>
-      <div th:if="${not #strings.isEmpty(errorMessage)}" class="modal-header bg-danger text-white">
-        <h5 class="modal-title">Erreur</h5>
-      </div>
-      <div class="modal-body">
-        <p th:text="${successMessage ?: errorMessage}"></p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
+
+<div th:fragment="message-modal">
+  <script th:inline="javascript">
+
+
+    document.addEventListener('DOMContentLoaded', function () {
+      let hasErrorMessage = [[${not #strings.isEmpty(errorMessage)}]];
+      let hasSuccessMessage = [[${not #strings.isEmpty(successMessage)}]];
+      console.log("Erreur: " + hasErrorMessage);
+      console.log("Succès: " + hasSuccessMessage);
+
+      if (hasErrorMessage || hasSuccessMessage) {
+        let messageModal = new bootstrap.Modal(document.getElementById('messageModal'));
+        messageModal.show();
+      }
+    });
+  </script>
+
+  <div  th:if="${not #strings.isEmpty(successMessage) or not #strings.isEmpty(errorMessage)}"
+        class="modal fade" id="messageModal" tabindex="-1" aria-labelledby="messageModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div th:if="${not #strings.isEmpty(successMessage)}" class="modal-header bg-success text-white">
+          <h5 class="modal-title">Succès</h5>
+        </div>
+        <div th:if="${not #strings.isEmpty(errorMessage)}" class="modal-header bg-danger text-white">
+          <h5 class="modal-title">Erreur</h5>
+        </div>
+        <div class="modal-body">
+          <p th:text="${successMessage ?: errorMessage}"></p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
+        </div>
       </div>
     </div>
   </div>
+
 </div>
-<!-- Script pour afficher la modal -->
-<!--<script th:inline="javascript">
-  window.addEventListener('DOMContentLoaded', (event) => {
-    let messageModal = document.getElementById('messageModal');
-    if (messageModal) {
-      let bootstrapModal = new bootstrap.Modal(messageModal);
-      bootstrapModal.show();
-    }
-  });
-</script>-->
-<script th:inline="javascript">
-  window.addEventListener('DOMContentLoaded', function() {
-    var messageModal = document.getElementById('messageModal');
-    if (messageModal) {
-      var bootstrapModal = new bootstrap.Modal(messageModal);
-      bootstrapModal.show();
-    }
-  });
-</script>
+
+
+
+<div th:replace="~{fragments/scripts :: scripts}"></div>
 
 </body>
 </html>
