--- a/src/main/resources/templates/mission-types/edit-type.html
+++ b/src/main/resources/templates/mission-types/edit-type.html
@@ -30,6 +30,7 @@
         </div>
     </div>
 </div>
+<div th:replace="~{fragments/modals/message-modal :: message-modal}"></div>
 
 <div th:replace="~{fragments/scripts :: scripts}"></div>
 
