--- a/src/main/resources/templates/volunteers/volunteers.html
+++ b/src/main/resources/templates/volunteers/volunteers.html
@@ -71,44 +71,7 @@
         </div>
     </div>
     <div th:replace="~{fragments/modals/message-modal :: message-modal}"></div>
-    <!-- Modal pour la confirmation de suppression -->
-    <div class="modal fade" id="deleteVolunteerModal" tabindex="-1" aria-labelledby="deleteVolunteerModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="deleteVolunteerModalLabel">Supprimer Bénévole</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <i class="bi bi-exclamation-triangle-fill">
-                            <span>
-                                Êtes-vous sûr de vouloir supprimer ce bénévole ?
-                            </span>
-                    </i>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
-                    <a class="btn btn-danger" id="confirmDelete">Confirmer</a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <script th:inline="javascript">
-        document.addEventListener('DOMContentLoaded', function() {
-            var deleteModal = document.getElementById('deleteVolunteerModal');
-            deleteModal.addEventListener('show.bs.modal', function(event) {
-                var button = event.relatedTarget;
-                var itemId = button.getAttribute('data-volunteer-id');
-                var deleteUrl = /*[[@{/volunteers/delete/}]]*/ 'deletePath';
-
-                var confirmDeleteBtn = document.getElementById('confirmDelete');
-                confirmDeleteBtn.onclick = function() {
-                    window.location.href = deleteUrl + itemId;
-                };
-            });
-        });
-    </script>
-
+    <div th:replace="~{fragments/modals/delete-volunteer-modal :: delete-volunteer-modal}"></div>
 
     <div th:replace="~{fragments/scripts :: scripts}"></div>
 </body>
