implement edit volunteer page. availability not done

--- a/src/main/resources/templates/fragments/modals/message-modal.html
+++ b/src/main/resources/templates/fragments/modals/message-modal.html
@@ -16,6 +16,10 @@
       if (hasErrorMessage || hasSuccessMessage) {
         let messageModal = new bootstrap.Modal(document.getElementById('messageModal'));
         messageModal.show();
+
+        setTimeout(function() {
+          messageModal.hide();
+        }, 3000);
       }
     });
   </script>
