--- a/src/main/resources/templates/mission-types/create-mission-type.html
+++ b/src/main/resources/templates/mission-types/create-mission-type.html
@@ -12,7 +12,7 @@
                 <form th:action="@{/mission-types}" method="post" id="newMissionTypeForm" th:object="${missionType}">
                     <div class="form-group">
                         <label for="name" class="col-form-label">Nom de la Mission :</label>
-                        <input th:field="*{name}" type="text" id="name" class="form-control" required="required">
+                        <input th:field="*{name}" type="text" id="name" class="form-control" required="required" autocomplete="off">
                     </div>
                     <div class="form-group">
                         <label for="description" class="col-form-label">Description :</label>
