--- a/src/main/resources/templates/mission-types/edit-type.html
+++ b/src/main/resources/templates/mission-types/edit-type.html
@@ -15,7 +15,7 @@
                     <input type="hidden" name="id" id="id" th:field="*{id}">
                     <div class="form-group">
                         <label for="name" class="col-form-label">Type de Mission :</label>
-                        <input th:field="*{name}" type="text" id="name" class="form-control" required="required">
+                        <input th:field="*{name}" type="text" id="name" class="form-control" required="required" autocomplete="off">
                     </div>
                     <div class="form-group">
                         <label for="description" class="col-form-label">Description :</label>
