--- a/src/main/resources/templates/volunteers/volunteer/edit-volunteer.html
+++ b/src/main/resources/templates/volunteers/volunteer/edit-volunteer.html
@@ -4,44 +4,197 @@
 <body>
 <div class="container">
     <div class="row">
-        <div class="card col-lg-6 col-md-6 justify-content-center container py-4">
+        <div class="card col-lg-12 col-md-9 justify-content-center container py-4">
             <div class="card-header">
-                <h1>Mise à jour</h1>
+                <h1>Nouveau bénévole</h1>
             </div>
             <div class="card-body">
+
                 <form th:action="@{/volunteers/update/{id}(id=${volunteer.id})}" method="post" id="editVolunteerForm" th:object="${volunteer}">
                     <input type="hidden" name="uuid" id="uuid" th:field="*{uuid}">
                     <input type="hidden" name="id" id="id" th:field="*{id}">
-                    <div class="form-group">
-                        <label for="lastName" class="col-form-label">Nom :</label>
-                        <input th:field="*{lastName}" type="text" id="lastName" class="form-control" required="required">
-                    </div>
-                    <div class="form-group">
-                        <label for="firstName" class="col-form-label">Prénom :</label>
-                        <input th:field="*{firstName}" type="text" id="firstName" class="form-control" required="required">
-                    </div>
+                    <div class="row">
+                        <div class="col-md-6 col-lg-5 mb-4">
+                            <div class="form-group">
+                                <label for="lastName" class="col-form-label">Nom :</label>
+                                <input th:field="*{lastName}" type="text" id="lastName" class="form-control" required="required" autocomplete="family-name">
+                            </div>
+                            <div class="form-group">
+                                <label for="firstName" class="col-form-label">Prénom :</label>
+                                <input th:field="*{firstName}" type="text" id="firstName" class="form-control" required="required" autocomplete="given-name">
+                            </div>
+                            <div class="form-group">
+                                <label for="email" class="col-form-label">Email :</label>
+                                <input th:field="*{email}" type="email" id="email" class="form-control" autocomplete="off">
+                            </div>
+                            <div class="form-group">
+                                <label for="phoneNumber" class="col-form-label">Téléphone :</label>
+                                <input th:field="*{phoneNumber}" type="text" id="phoneNumber" class="form-control" autocomplete="tel">
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-lg-7 mb-4">
+                            <div class="form-group">
+                                <h5>Types de mission</h5>
+                                <hr>
+                            </div>
 
-                    <div class="form-group">
-                        <label for="email" class="col-form-label">Email :</label>
-                        <input th:field="*{email}" type="email" id="email" class="form-control"></input>
-                    </div>
+                            <div th:if="${allMissionTypes.isEmpty()}">
+                                <div class="alert alert-warning my-2" role="alert">
+                                    <i class="bi bi-exclamation-triangle-fill">
+                                        <span>La liste des types de mission est actuellement vide. Vous pouvez ajouter des types de mission plus tard.</span>
+                                    </i>
+                                </div>
+                            </div>
+                            <div class="d-flex flex-wrap" role="group" th:unless="${allMissionTypes.isEmpty()}">
+                                <div class="my-2 me-2" th:each="missionType:${allMissionTypes}">
+                                    <input th:id="${'btn-check-outlined' + missionType.id}"
+                                           th:value="${missionType.id}"
+                                           th:name="missionTypes" type="checkbox" class="btn-check" autocomplete="off"
+                                           th:checked="${missionType.selected}"
+                                    >
+                                    <label class="btn btn-outline-secondary" th:for="${'btn-check-outlined' + missionType.id}" th:text="${missionType.name}"></label><br>
+                                    <input type="hidden"
+                                           th:name="missionTypeUuids"
+                                           th:id="${'missionTypeUuid-' + missionType.id}"
+                                           th:value="${missionType.uuid}"
+                                    >
+                                </div>
+                            </div>
 
-                    <div class="form-group">
-                        <label for="phoneNumber" class="col-form-label">Téléphone :</label>
-                        <input th:field="*{phoneNumber}" type="text" id="phoneNumber" class="form-control">
-                    </div>
+                            <div class="form-group">
+                                <hr>
+                                <h5>Disponibilités</h5>
+                                <hr>
+                                <div id="availabilitySection">
 
+                                </div>
+                                <button type="button" id="addAvailability" class="btn btn-sm btn-outline-secondary my-2">Ajouter une Disponibilité</button>
+                            </div>
+                        </div>
+                    </div>
                 </form>
             </div>
             <div class="card-footer">
-                <a class="btn btn-outline-secondary pb-2" th:href="@{/volunteers}">Annuler</a>
-                <button type="submit" form="editVolunteerForm" class="btn btn-primary">Mettre à jour</button>
+                <a class="btn btn-outline-secondary me-2" th:href="@{/volunteers}">Annuler</a>
+                <button type="submit" form="editVolunteerForm" class="btn btn-primary">Enregistrer</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Modal pour l'alerte -->
+<div class="modal fade" id="alertModal" tabindex="-1" aria-labelledby="alertModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header bg-danger">
+                <h5 class="modal-title text-white" id="alertModalLabel">Alerte</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Veuillez vérifier les disponibilités : tous les champs doivent être remplis, un jour de la semaine doit être sélectionné, et l'heure de début doit être antérieure à l'heure de fin.
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
             </div>
         </div>
     </div>
 </div>
 
+<script>
+    document.getElementById('addAvailability').addEventListener('click', function() {
+        let availabilitySection = document.getElementById('availabilitySection');
+        let index = availabilitySection.children.length;
 
+        let availabilityDiv = document.createElement('div');
+        availabilityDiv.className = 'availabilityRow row gy-2 gx-3 align-items-center mb-2';
+        availabilityDiv.innerHTML = `
+            <div class="col-auto">
+                <label class="form-label-sm" for="availabilities[${index}].dayOfWeek">Jour :</label>
+                <select class="form-select-sm" name="availabilities[${index}].dayOfWeek" id="availabilities${index}.dayOfWeek" required="required">
+                    <option selected>Jour</option>
+                    <option value="MONDAY">Lundi</option>
+                    <option value="TUESDAY">Mardi</option>
+                    <option value="WEDNESDAY">Mercredi</option>
+                    <option value="THURSDAY">Jeudi</option>
+                    <option value="FRIDAY">Vendredi</option>
+                    <option value="SATURDAY">Samedi</option>
+                    <option value="SUNDAY">Dimanche</option>
+                </select>
+            </div>
+            <div class="col-auto">
+                <label class="form-label-sm" for="availabilities[${index}].startTime">Heure de début :</label>
+                <input class="form-control-sm" type="time" name="availabilities[${index}].startTime" id="availabilities[${index}].startTime"/>
+            </div>
+            <div class="col-auto">
+                <label class="form-label-sm" for="availabilities[${index}].endTime">Heure de fin :</label>
+                <input class="form-control-sm" type="time" name="availabilities[${index}].endTime" id="availabilities[${index}].endTime"/>
+            </div>
+        `;
+
+        let removeButton = document.createElement('button');
+        removeButton.type = 'button';
+        removeButton.className = 'btn btn-sm btn-danger removeAvailability';
+
+        let icon = document.createElement('i');
+        icon.className = 'bi bi-x-square';
+        removeButton.appendChild(icon);
+        removeButton.addEventListener('click', function() {
+            availabilityDiv.remove();
+            updateAvailabilityIndexes();
+        });
+
+        let buttonCol = document.createElement('div');
+        buttonCol.className = 'col-auto';
+        buttonCol.appendChild(removeButton);
+
+        availabilityDiv.appendChild(buttonCol);
+        availabilitySection.appendChild(availabilityDiv);
+    });
+
+    document.getElementById('availabilitySection').addEventListener('click', function(event) {
+        if (event.target.classList.contains('removeAvailability')) {
+            event.target.closest('.availabilityRow').remove();
+            updateAvailabilityIndexes();
+        }
+    });
+
+    function updateAvailabilityIndexes() {
+        let availabilityRows = document.querySelectorAll('#availabilitySection > .availabilityRow');
+        availabilityRows.forEach((row, index) => {
+            row.querySelectorAll('select, input').forEach(input => {
+                input.name = input.name.replace(/\[\d+]/, `[${index}]`);
+            });
+        });
+    }
+
+
+    // Validation lors de la soumission du formulaire
+    document.getElementById('editVolunteerForm').addEventListener('submit', function(event) {
+        let isValid = true;
+        const availabilityRows = document.querySelectorAll('#availabilitySection > div');
+
+        availabilityRows.forEach(function(row) {
+            const dayOfWeek = row.querySelector('select[name^="availabilities["]').value;
+            const startTime = row.querySelector('input[name$=".startTime"]').value;
+            const endTime = row.querySelector('input[name$=".endTime"]').value;
+
+            // Vérifiez si 'dayOfWeek' est égal à l'option non valide (ex. "Jour")
+            if (dayOfWeek === "Jour") {
+                isValid = false;
+            }
+
+            if ((dayOfWeek || startTime || endTime) && (!dayOfWeek || !startTime || !endTime || startTime >= endTime)) {
+                isValid = false;
+            }
+        });
+        if (!isValid) {
+            event.preventDefault();
+            const alertModal = new bootstrap.Modal(document.getElementById('alertModal'));
+            alertModal.show();
+        }
+
+    });
+
+</script>
 
 <div th:replace="~{fragments/scripts :: scripts}"></div>
 
